--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.caparking" >
+    package="com.example.caparking">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -17,7 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CAparking"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".PurchaseActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".UpdateParkingArea"
+            android:exported="false" />
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
@@ -29,24 +36,21 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-                <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
-                    <category android:name="android.intent.category.LAUNCHER" />
-                </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".MapsActivity" />
         <activity android:name=".ViewPlaceActivity" />
         <activity android:name=".payment_activity" />
-        <activity android:name=".SeatSelection"/> >
-
-        <activity android:name=".adminlogin" />
-        <activity android:name=".adminsignup" />
-        <activity android:name=".adminpanel" />
+        <activity android:name=".SeatSelection" />
+        <activity android:name=".AdminLogin" />
+        <activity android:name=".AdminSignup" />
+        <activity android:name=".AdminPanel" />
         <activity android:name=".Signup" />
-        <activity android:name=".Login"/>
-        <activity
-            android:name=".ViewDirection"
-            android:label="@string/title_activity_view_direction" />
+        <activity android:name=".Login" />
     </application>
 
 </manifest>
