--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
     androidTestImplementation "androidx.room:room-testing:2.4.3"
     implementation 'com.braintreepayments:card-form:3.1.1'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
 }
