--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,10 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
+
+    // RxJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+
 }
