--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
+        android:name=".Hilt.HiltApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,31 +20,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CAparking"
         tools:targetApi="31">
-        <activity
-            android:name=".EditProfileActivity"
-            android:exported="false" />
-        <activity
-            android:name=".SecurityActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AboutActivity"
-            android:exported="false" />
+
         <activity
             android:name=".UpdatePlaceActivity"
             android:exported="false" />
-        <activity
-            android:name=".PurchaseActivity"
-            android:exported="false" />
+
         <activity
             android:name=".UpdateParkingArea"
             android:exported="false" />
-        <activity
-            android:name=".ProfileActivity"
-            android:exported="false" />
+
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
 
         <activity
             android:name=".MainActivity"
@@ -53,12 +44,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".AlarmBroadcastReceiver" />
+
         <activity
             android:name=".MapsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ViewPlaceActivity" />
-        <activity android:name=".payment_activity" />
-        <activity android:name=".SeatSelection" />
+
+
         <activity android:name=".AdminLogin" />
         <activity android:name=".AdminSignup" />
         <activity android:name=".AdminPanel" />
