--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
 
     <application
         android:name=".Hilt.HiltApplication"
@@ -35,7 +38,7 @@
             android:value="@string/google_maps_key" />
 
 
-        <activity
+       <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -49,14 +52,15 @@
 
         <activity
             android:name=".MapsActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
 
+        </activity>
 
+        <activity android:name=".SignUpActivity"/>
+        <activity android:name=".LoginActivity"/>
         <activity android:name=".AdminLogin" />
         <activity android:name=".AdminSignup" />
         <activity android:name=".AdminPanel" />
-        <activity android:name=".Signup" />
-        <activity android:name=".Login" />
     </application>
 
 </manifest>
